# openscreen

./: .gitignore  README.md  electron-builder.json5  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  tauri-build.yml
docs/superpowers/plans/: 2026-03-26-blur-mask.md  2026-03-26-highlight-mask.md
docs/superpowers/specs/: 2026-03-26-blur-mask-design.md  2026-03-26-highlight-mask-design.md
electron/: electron-env.d.ts  main.ts  preload.ts  windows.ts
electron-legacy/: electron-env.d.ts  main.ts  preload.ts  windows.ts
electron-legacy/ipc/: handlers.ts
electron/ipc/: handlers.ts
recordingtest/: README.md  recording-1775034712489.openscreen  recording-1775034712489.session.json  recording-1775034712489.webm  recording-1775034712489.webm.cursor.json
scripts/: verify-tauri-api.mjs
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cursor.rs  lib.rs  main.rs  menu.rs  tray.rs
src-tauri/src/commands/: audio.rs  filesystem.rs  mod.rs  recording.rs  settings.rs  sources.rs  tray.rs  window.rs
src/components/launch/: LaunchWindow.tsx  SourceSelector.tsx
src/components/video-editor/: AnnotationOverlay.tsx  AnnotationSettingsPanel.tsx  HighlightOverlay.tsx  SettingsPanel.tsx  VideoEditor.tsx  VideoPlayback.tsx  projectPersistence.ts  types.ts
src/contexts/: I18nContext.tsx  ShortcutsContext.tsx
src/hooks/: useEditorHistory.ts  useScreenRecorder.ts
src/lib/: assetPath.ts  compositeLayout.ts  desktopApi.test.ts  desktopApi.ts  recordingSession.test.ts  requestCameraAccess.ts  shortcuts.test.ts  shortcuts.ts
src/lib/exporter/: annotationRenderer.ts  audioEncoder.ts  frameRenderer.ts  streamingDecoder.ts  videoExporter.ts
src/utils/: getTestId.ts  platformUtils.ts
tests/e2e/: annotation-export.spec.ts  gif-export.spec.ts  local-recording-export.spec.ts  mp4-export.spec.ts  project-file.spec.ts  window-switch.spec.ts
(+12 files in other folders)
