[package]
name = "openscreen"
version = "1.2.0"
description = "OpenScreen - Screen recording and video editing application"
authors = ["OpenScreen Team"]
license = "MIT"
repository = "https://github.com/AoThen/openscreen"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "openscreen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"

# 日志
tauri-plugin-log = "2"
log = "0.4"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# 目录
directories = "5"

# 图像处理 (跨平台)
image = "0.25"
base64 = "0.22"

# 音频捕获
cpal = "0.15"

# 缩略图生成 (跨平台)
xcap = "0.0"

# 平台特定依赖
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
font-kit = "0.13"
core-graphics = "0.24"
# macOS 屏幕捕获 (使用 zed-scap fork 修复兼容性问题)
zed-scap = "0.0.8-zed"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "wingdi",
    "windef",
    "dwmapi",
    "shellapi",
    "errhandlingapi",
] }
dwrote = "0.11"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_System_Com",
] }
# Windows 屏幕捕获 (使用 zed-scap fork 修复 windows-capture v1.5.0 兼容性问题)
zed-scap = "0.0.8-zed"

[target.'cfg(target_os = "linux")'.dependencies]
font-kit = "0.13"
x11 = { version = "2", features = ["xlib"] }
# Linux 屏幕捕获暂时使用 xcap (仅缩略图)
# scap 在 Linux 上有编译问题，待上游修复后再启用
